# file_spec_contractor

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  README.md  main.py  opencode.json  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  pyright.yml  ruff.yml  tests.yml
fsc/: __init__.py
fsc/commands/: generate.py  init.py
fsc/config/: loader.py
fsc/prompts/: primary.md
fsc/providers/: __init__.py
fsc/spec/: generator.py
fsc/utils/: fs.py
prompts/primary/: fsc_eng_1.md  fsc_eng_5.md  fsc_ru_3.md  fsc_ru_4.md  fsc_ru_5.md
src/fsc/: __init__.py  main.py  prompt_loader.py
src/fsc/commands/: _options.py  clean.py  deinit.py  generate.py  init.py  reinit.py
src/fsc/config/: enums.py  loader.py  schema.py  schemas.py
src/fsc/prompts/: fsc_en_1.md  fsc_en_5.md  fsc_en_6.md  fsc_en_7.md  fsc_en_8.md  fsc_ru_1.md  fsc_ru_2.md  fsc_ru_3.md  fsc_ru_4.md  fsc_ru_5.md  primary.md
src/fsc/providers/: __init__.py  base.py  deepseek.py  factory.py  openai_compatible.py  openrouter.py
src/fsc/spec/: batch_generator.py  bulk_generator.py  engine.py  generator.py
src/fsc/utils/: console.py  env.py  fs.py  progress.py  prompt_loader.py  scala.py
tests/: test_batch_generator.py  test_bulk_generator.py  test_commands.py  test_config.py  test_config_errors.py  test_deepseek.py  test_discover.py  test_fs.py  test_integration.py  test_openrouter.py  test_prompt_loader.py
