[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-spec-contractor"
version = "0.1.0"
description = "Generate compact file specifications for LLMs"
dependencies = [
  "typer[all]>=0.9.0",
  "rich>=13.0.0",
  "httpx>=0.24.0",
  "pytest>=9.0.3",
]

[tool.poetry.dev-dependencies]
pytest = "*"
