[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-spec-contractor"
version = "0.1.1"
description = "Generate compact file specifications for LLMs"
authors = [{ name = "FileSpecContractor" }]
requires-python = ">=3.12"
dependencies = ["typer>=0.9.0", "rich>=13.0.0", "httpx>=0.24.0"]

[project.scripts]
fsc = "fsc.main:main"

[dependency-groups]
dev = ["pytest>=9.0.3"]

[tool.setuptools.packages.find]
where = ["src"]
